# ecc_eao_masking_policy_for_small_populations

./: .gitignore  README.md  pyproject.toml
src/masking_policy_for_small_populations/: masking_policy_for_small_populations.py  terminal_interactions.py
src/masking_policy_for_small_populations_lib/: masking_policy_for_small_populations.py  terminal_interactions.py
src/package_name/: ecc_eao_data_masking_routine.py  terminal_interactions.py
tests/: dummy_data.csv  dummy_data_Msk_Actual.csv  dummy_data_mea_col_rel_0.csv  dummy_data_mea_col_rel_0_Masked.csv  dummy_data_mea_col_rel_1.csv  dummy_data_mea_col_rel_1_Masked_Actual.csv  dummy_data_mea_col_rel_2.csv  dummy_data_mea_col_rel_2_Masked.csv  test_masking_policy_for_small_populations.py
