[project]
name = 'oracle_connector'
version = '0.0.1'
authors = [
  { name='Education Analytics Branch, Ministry of Education and Child Care, Government of British Columbia', email='EDUC.ReportingUnit@gov.bc.ca' }
]
description = 'This library is designed to connect in a generic way to an Oracle database.'
readme = 'README.md'
requires-python = '>=3.7'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "${workspaceFolder}/src/oracle_connector_package"

[build-system]
requires = ["setuptools>=61.0","sqlalchemy","pandas"]
build-backend = "setuptools.build_meta"
