[project]
name = 'ecc_eao_masking_policy_for_small_populations'
version = '0.0.1'
authors = [
  { name='Education Analytics Branch, Ministry of Education and Child Care, Government of British Columbia', email='educ.systemperformance@gov.bc.ca' }
]
description = 'This library is designed to apply masking for small populations on a given CSV or XLSX file.'
readme = 'README.md'
requires-python = '>=3.7'
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE Version 3',
    'Operating System :: OS Independent',
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov=./scr",
    "--cov-report=html:cover"
]

pythonpath = [".","src","src/masking_policy_for_small_populations"]
log_file_level = "INFO"
log_file_format = "[%(asctime)s] %(levelname)-10s %(funcName)-12s   %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["setuptools>=61.0","pandas"]
build-backend = "setuptools.build_meta"
